# libspng

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  benchmark.c  benchmark_png.c  benchmark_spng.c  benchmark_vpng.c  codecov.yml  common.c  common.h  decode.c  example.c  meson.build  meson_options.txt  mkdocs.yml  spng.c  spng.h  test_png.h  test_spng.h  test_vpng.h  testsuite.c  vpng.c  vpng.h
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  main.yml  on_PR_meson.yaml
.gitlab/issue_templates/: Bug.md
cmake/: Config.cmake.in  libspng.pc.in
debian/: copyright
docs/: Makefile  api.md  api.rst  build.md  build.rst  chunk.md  chunk.rst  conf.py  context.md  context.rst  decode.md  decode.rst  encode.md  errors.md  errors.rst  index.md  index.rst  migrate-libpng.md  platform.rst  usage.md  usage.rst  version.md  version.rst
examples/: example.c  meson.build
include/spng/: meson.build
spng/: spng.c  spng.h
src/: common.c  common.h  decode.c  filter_sse2_intrinsics.c  spng.c  spng.h
subprojects/: libpng.wrap  miniz.wrap  zlib.wrap
tests/: README.md  build.sh  cross_oss_fuzz.txt  framac_stubs.h  fuzz_main.c  meson.build  ossfuzz.sh  spng.dict  spng_read_fuzzer.c  spng_read_fuzzer.cc  spng_read_fuzzer.options  spng_write_fuzzer.c  spngt_common.h  target_clones.c  test.cpp  test_png.h  test_spng.h  testsuite.c
tests/crashers/: meson.build
tests/images/: meson.build
tests/misc/: meson.build
